--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lucide": "^0.452.0",
     "lucide-react": "^0.452.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
