--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.9.2",
     "lucide": "^0.452.0",
     "lucide-react": "^0.452.0",
     "react": "^18.3.1",
