--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emoji-mart/react": "^1.1.1",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.9.2",
+    "firebase": "^10.14.1",
     "lucide": "^0.452.0",
     "lucide-react": "^0.452.0",
     "react": "^18.3.1",
